--- a/css/main.css
+++ b/css/main.css
@@ -1169,7 +1169,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #bdffff;
+  background: #65aaff;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
@@ -2677,5 +2677,5 @@ body {
   background-attachment: fixed;
   background-position: 50% 50%;
   background-size: cover;
-  opacity: 1;
+  opacity: 0.75;
 }
