--- a/css/main.css
+++ b/css/main.css
@@ -1194,7 +1194,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #a6ffff;
+  background: #7f187d;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
