--- a/css/main.css
+++ b/css/main.css
@@ -1194,7 +1194,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #ffd641;
+  background: #88d165;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
@@ -2697,7 +2697,7 @@ mjx-container + br {
   }
 }
 body {
-  background: url("/images/background-8.jpg");
+  background: url("/images/3.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: 50% 50%;
